2001-02-27  Mike Fleming  <mfleming@eazel.com>

	Bug 6965 -- move to using report_redirect.
	Commited so Darin can debug report_redirect.

	* components/mozilla/nautilus-mozilla-content-view.c:
	(view_load_location_callback), (mozilla_realize_callback),
	(mozilla_title_changed_callback), (mozilla_location_callback),
	(mozilla_net_start_callback), (mozilla_net_stop_callback),
	(mozilla_progress_callback), (mozilla_dom_mouse_click_callback),
	(vfs_open_callback), (navigate_mozilla_to_nautilus_uri),
	(update_nautilus_uri):


2001-02-27  Pavel Cisler  <pavel@eazel.com>

	reviewed by: John Sullivan <sullivan@eazel.com>

	Fix 7116: (Location bar grows taller causing a re-layout
		   of the icon view)
	
	* src/nautilus-window.c: (set_dummy_initial_view_as_menu),
	(nautilus_window_constructed):
	Populate the "View as" menu the first time it is created with
	a dummy "View as ..." menu item to prevent it from comming up in
	a shrunken state that gets resized later and re-shuffles the window.

2001-02-26  Eskil Heyn Olsen  <eskil@eazel.com>

	reviewed by: Robey Pointer <robey@eazel.com> sez "Looks
	good... Wow, I wonder how long the softcat lookup-by-feature thing
	was broken before? (doh!)"

	* components/services/install/command-line/eazel-alt-install-corba.
	c: (something_failed):
	Moved a duplicate fprintf that caused problems to be printed
	twice.
	
	* components/services/install/idl/trilobite-eazel-install.idl:
	Added a string sequence of features. Need this so the clients can
	print "package foo needs file libfoo.so" instead of "package foo
	needs another package".
	
	* components/services/install/lib/eazel-install-corba-types.c:
	(corba_string_sequence_to_glist),
	(g_list_to_corba_string_sequence),
	(corba_packagedatastruct_fill_from_packagedata),
	(corba_packagedatastruct_fill_deps),
	(packagedata_tree_from_corba_packagedatastructlist):
	Fill in and copy and convert and stuff the new features list.
	
	* components/services/install/lib/eazel-install-logic2.c: