@@ -1,3 +1,14 @@
+2001-02-27  Pavel  <pavel@eazel.com>
+
+	reviewed by: Arlo Rose <arlo@eazel.com>
+
+	Fix 1509: List view draws using incorrect design specification
+	
+	* libnautilus-extensions/nautilus-list.c:
+	(nautilus_list_setup_style_colors):
+	Tweak color shifting values with Arlo to get better color ranges
+	for the list view grid.
+
 2001-02-27  Mike Fleming  <mfleming@eazel.com>
 
 	Bug 6965 -- move to using report_redirect.
